# oura-lab

./: docker-compose.dev.yml  package.json  pnpm-lock.yaml
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/app/: layout.tsx
apps/web/src/app/api/analytics/[...path]/: route.ts
apps/web/src/app/api/auth/csrf/: route.ts
apps/web/src/app/chat/: page.tsx
apps/web/src/app/correlations/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/insights/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/patterns/: page.tsx
apps/web/src/app/register/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/: auth-guard.tsx  chat-chart.tsx
apps/web/src/lib/: api-client.ts  auth-context.tsx  ndjson.ts
apps/web/tests/: ndjson.test.ts
services/analytics/: pyproject.toml
services/analytics/app/: auth.py  chat.py  db.py  dependencies.py  main.py  schemas.py  settings.py
services/analytics/app/analysis/: correlations.py  patterns.py
services/analytics/app/oura/: auth.py  client.py
services/analytics/app/pipelines/: features.py  ingest.py
services/analytics/app/prompts/: system_prompt.md
services/analytics/migrations/: 003_multi_user.sql  004_chat_history.sql  006_add_60_100day_features.sql  007_chat_message_artifacts.sql  009_enable_pgvector.sql
services/analytics/tests/: conftest.py  test_auth.py  test_chat.py  test_chat_phase1.py  test_csrf.py  test_ingest_sleep_selection.py  test_isolation.py  test_oauth.py  test_rls_enforcement.py  test_sync_stream.py
(+6 files in other folders)
